[package]
name = "mouse-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
crossbeam-channel = "0.5.8"
dotenv = "0.15.0"
dyn-clone = "1.0.14"
enigo = "0.1.2"
futures-util = "0.3.28"
local-ip-address = "0.5.3"
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
warp = "0.3.5"
