[package]
name = "jojo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
crossbeam-channel = "0.5.8"
dotenv = "0.15.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
jojo-common = { path = "../jojo-common", features = ["driver"] }
dyn-clone = "1.0.14"
futures-util = "0.3.28"
axum = { version = "0.7.1", features = ["ws"]}
spin_sleep = "1.1.1"
lazy_static = "1.4.0"
